workloads/prometheus/alertman-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
spec:
  ports:
    - port: 9003
      protocol: TCP
      targetPort: 9003
      name: 9003-tcp
  selector:
    deployment: alertmanager
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
