workloads/prometheus/alertman-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: alertmanager
spec:
  host: alertmanager.apps.microshift.is-in-the.cloud
  port:
    targetPort: 9093
  tls:
    termination: edge
  to:
    kind: Service
    name: alertmanager
    weight: 100
  wildcardPolicy: None
status: {}
