workloads/prometheus/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: miflora-prometheus
spec:
  host: prometheus.microshift.petbattle.app
  port:
    targetPort: 9090
  tls:
    termination: edge
  to:
    kind: Service
    name: miflora-prometheus
    weight: 100
  wildcardPolicy: None
status: {}
